--- a/src/main/resources/drones/kinetic/machine_gun.yml
+++ b/src/main/resources/drones/kinetic/machine_gun.yml
@@ -48,6 +48,16 @@ default:
     # Custom head from config.yml
     head: machine-gun-1
 
+    # Drone head position (x z is best to keep the same value or it will not be a perfect circle around player)
+    # But you can create some awesome shapes around player if you have the values a little bit off like x: 1.875 z: 1.575
+    position:
+      # x position (1.575 is left -1.575 is right)
+      x: 1.575
+      # Drone head height (y offset you can use - values also)
+      y: 2
+      # z position (1.575 is left -1.575 is right)
+      z: 1.575
+
     # Damage between min, max
     min: 3.5
     max: 5
@@ -129,6 +139,10 @@ default:
   2:
     find-target: 3
     head: machine-gun-2
+    position:
+      x: 1.575
+      y: 2
+      z: 1.575
     min: 1.5
     max: 7
     range: 11
