--- a/src/main/resources/drones/special/flamethrower.yml
+++ b/src/main/resources/drones/special/flamethrower.yml
@@ -48,6 +48,16 @@ default:
     # Custom head from config.yml
     head: flamethrower-1
 
+    # Drone head position (x z is best to keep the same value or it will not be a perfect circle around player)
+    # But you can create some awesome shapes around player if you have the values a little bit off like x: 1.875 z: 1.575
+    position:
+      # x position (1.575 is left -1.575 is right)
+      x: 1.575
+      # Drone head height (y offset you can use - values also)
+      y: 2
+      # z position (1.575 is left -1.575 is right)
+      z: 1.575
+
     # Damage between min, max
     min: 0.5
     max: 3
@@ -141,6 +151,10 @@ default:
   2:
     find-target: 3
     head: flamethrower-2
+    position:
+      x: 1.575
+      y: 2
+      z: 1.575
     min: 0.5
     max: 5
     range: 11
@@ -193,6 +207,10 @@ default:
   3:
     find-target: 3
     head: flamethrower-3
+    position:
+      x: 1.575
+      y: 2
+      z: 1.575
     min: 0.5
     max: 8
     range: 12
