--- a/src/main/resources/drones/kinetic/machine_gun.yml
+++ b/src/main/resources/drones/kinetic/machine_gun.yml
@@ -58,6 +58,12 @@ default:
       # z position (1.575 is left -1.575 is right)
       z: 1.575
 
+    # List of blocks the drone cannot shoot thru
+    #block-check:
+    #  - WATER
+    #  - LAVA
+    #  - VINE
+
     # Damage between min, max
     min: 3.5
     max: 5
@@ -143,6 +149,10 @@ default:
       x: 1.575
       y: 2
       z: 1.575
+    #block-check:
+    #  - WATER
+    #  - LAVA
+    #  - VINE
     min: 1.5
     max: 7
     range: 11
