--- a/src/main/resources/drones/special/flamethrower.yml
+++ b/src/main/resources/drones/special/flamethrower.yml
@@ -58,6 +58,12 @@ default:
       # z position (1.575 is left -1.575 is right)
       z: 1.575
 
+    # List of blocks the drone cannot shoot thru
+    #block-check:
+    #  - WATER
+    #  - LAVA
+    #  - VINE
+
     # Damage between min, max
     min: 0.5
     max: 3
@@ -155,6 +161,10 @@ default:
       x: 1.575
       y: 2
       z: 1.575
+    #block-check:
+    #  - WATER
+    #  - LAVA
+    #  - VINE
     min: 0.5
     max: 5
     range: 11
@@ -211,6 +221,10 @@ default:
       x: 1.575
       y: 2
       z: 1.575
+    #block-check:
+    #  - WATER
+    #  - LAVA
+    #  - VINE
     min: 0.5
     max: 8
     range: 12
