--- a/src/main/resources/drones/special/lightning.yml
+++ b/src/main/resources/drones/special/lightning.yml
@@ -58,6 +58,12 @@ default:
       # z position (1.575 is left -1.575 is right)
       z: 1.575
 
+    # List of blocks the drone cannot shoot thru
+    #block-check:
+    #  - WATER
+    #  - LAVA
+    #  - VINE
+
     # Damage between min, max
     min: 3
     max: 8
@@ -170,6 +176,10 @@ default:
       x: 1.575
       y: 2
       z: 1.575
+    #block-check:
+    #  - WATER
+    #  - LAVA
+    #  - VINE
     min: 5
     max: 8
     range: 16
@@ -232,6 +242,10 @@ default:
       x: 1.575
       y: 2
       z: 1.575
+    #block-check:
+    #  - WATER
+    #  - LAVA
+    #  - VINE
     min: 7
     max: 10
     range: 20
